--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Budget Tracker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <script defer src="service.worker.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#317EFB" />
+    <title>Webpack App</title>
 
     <link
       rel="stylesheet"
@@ -15,6 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="manifest" href="manifest.json" />
+    <script defer src="service.worker.js"></script>
   </head>
   <body>
     <div class="wrapper">
